[grid-layout] fixes issue with empty space under the grid-layout (on firefox)

--- a/packages/components/grid-layout/src/grid-layout.scss
+++ b/packages/components/grid-layout/src/grid-layout.scss
@@ -267,6 +267,10 @@
             @include media( '>=tv' ) {
                 grid-template-columns: repeat( #{ map-get( $bricksPerRow, tv ) }, 1fr );
             }
+
+            &:after {
+                display: none !important;
+            }
         }
 
         &__brick {
